--- a/index.html
+++ b/index.html
@@ -37,7 +37,6 @@
 		<!-- royal_loader -->
 		<div id="page">
 			<!-- Mobile Menu -->
-
 			<nav id="menu">
 				<ul>
 					<li class="active">
@@ -51,19 +50,23 @@
 					</li>
 					<li>
 						<a href="services.html">Services</a>
-						<ul >
+						<ul>
+							<li ><a  href="specializedServices.html">Specialized services</a></li>
 							<li ><a  href="securityServices.html">Security services</a></li>
 							<li ><a  href="cleaningServices.html">Cleaning services</a></li>
+							<li ><a  href="pestControlServices.html">Pest Control</a></li>
+							<li ><a  href="eventSecurity.html">Event Security</a></li>
+							<li ><a  href="housekeepingService.html">Housekeeping services</a></li>
+							<li ><a  href="technicalServiceSupport.html">Technical support</a></li>
 							<li ><a  href="single_services_3.html">Single Services V3</a></li>
 							<li ><a  href="services.html">Services Page</a></li>
-							<li ><a  href="securityServices.html">Single Services </a></li>
-					
+							<li ><a  href="single_services.html">Single Services</a></li>
 						</ul>
 					</li>
 					<li>
-						<a href="cases.html">Cases</a>
+						<a href="gallery.html">Gallery</a>
 						<ul >
-							<li><a href="cases.html">Cases Page</a></li>
+							<li><a href="Gallery.html">Gallery Page</a></li>
 						</ul>
 					</li>
 				
@@ -88,7 +91,7 @@
 					<li>
 						<a href="shop.html">Shop</a>
 						<ul >
-							<li> <a href="shop.html" ><span>Shop Category </span></a></li>
+							<li> <a href="shop.html" ><span>Our products </span></a></li>
 						</ul>
 					</li>
 					<li><a href="contact.html">Contact</a></li>
@@ -105,7 +108,7 @@
 									<ul>
 										<li><a href="contact.html"><i class="fa fa-map-marker" aria-hidden="true"></i> House No: 15A, Road No: 35 Gulshan-2 Dhaka 1212</a></li>
 										<li><a href="mailto:admin@amwal.com"><i class="fa fa-envelope" aria-hidden="true"></i>revenco.sy@gmail.com</a></li>
-										<li><a href="tel:0100123456789"><i class="fa fa-phone" aria-hidden="true"></i> 0100100100100</a></li>
+										<li><a href="tel:0100123456789"><i class="fa fa-phone" aria-hidden="true"></i> +8801716237917</a></li>
 									</ul>
 								</div>
 								<div class="tb-social-lan language">
@@ -127,7 +130,7 @@
 						<div class="row">
 							<div class="col-md-12">
 								<div class="navi-warp-home-1">
-								<a href="index.html" class="logo"><img src="/images/icon/revenco logo.png" class="img-responsive" alt="Image"></a>
+								<a href="index.html" class="logo"><img src="/images/icon/final logo.png" class="img-responsive" alt="Image"></a>
 								<a href="#menu" class="btn-menu-mobile"><i class="fa fa-bars" aria-hidden="true"></i></a>
 								<nav>
 									<ul class="navi-level-1 active-subcolor">
@@ -149,17 +152,22 @@
 										<li>
 											<a href="services.html">Services</a>
 											<ul class="navi-level-2">
+												<li ><a  href="specializedServices.html">Specialized services</a></li>
 												<li ><a  href="securityServices.html">Security services</a></li>
 												<li ><a  href="cleaningServices.html">Cleaning services</a></li>
+												<li ><a  href="pestControlServices.html">Pest Control</a></li>
+												<li ><a  href="eventSecurity.html">Event Security</a></li>
+												<li ><a  href="housekeepingService.html">Housekeeping services</a></li>
+												<li ><a  href="technicalServiceSupport.html">Technical support</a></li>
 												<li ><a  href="single_services_3.html">Single Services V3</a></li>
 												<li ><a  href="services.html">Services Page</a></li>
 												<li ><a  href="single_services.html">Single Services</a></li>
 											</ul>
 										</li>
 										<li>
-											<a href="cases.html">Cases</a>
+											<a href="Gallery.html">Gallery</a>
 											<ul class="navi-level-2">
-												<li><a href="cases.html">Cases Page</a></li>
+												<li><a href="Gallery.html">Gallery Page</a></li>
 											</ul>
 										</li>
 										<li>
@@ -184,7 +192,7 @@
 										<li>
 											<a href="shop.html">Shop</a>
 											<ul class="navi-level-2">
-												<li> <a href="shop.html" ><span>Shop Category </span></a></li>
+												<li> <a href="shop.html" ><span>Our products </span></a></li>
 											</ul>
 										</li>
 										<li><a href="contact.html">Contact</a></li>
@@ -220,7 +228,8 @@
 									 data-transform_in="y:-100px;opacity:0;s:1500;e:Power3.easeOut;" 
 									 data-transform_out="y:-100;opacity:0;s:1000;e:Power3.easeInOut;s:1000;e:Power3.easeInOut;" 
 									data-start="1000" 
-									><p >LEAVE MONEY PROBLEM TO US & JUST </p>
+									>
+									<!-- <p>LEAVE MONEY PROBLEM TO US & JUST </p> -->
 								</div>
 								<!-- LAYER NR. 2 -->
 								<div class="tp-caption tp-resizeme sl-s2" 
@@ -234,7 +243,7 @@
 									data-whitespace="['nowrap','nowrap','nowrap','normal']"
 									data-fontsize="['60','50','40','30']"
 									data-lineheight="['auto','auto','auto','40']"
-									><p >FOCUS ON YOUR BUSINESS</p>
+									><p>Revenco security – committed to keeping you safe!</p>
 								</div>
 								<!-- LAYER NR. 3 -->
 								<div class="tp-caption tp-resizeme sl-s3" 
@@ -247,10 +256,10 @@
 								 	data-transform_out="y:100px;opacity:0;s:1000;e:Power3.easeInOut;s:1000;e:Power3.easeInOut;"  
 									data-start="1600" 
 									data-fontsize="['16','16','14','12']"
-									><p style="text-align: center;">Moving forward you will be paired with a highly vetted, professional awal bookkeeper who will get to know.</p>
+									><p style="text-align: center;">Trust our expert team to protect what matters most with reliable and efficient security solutions designed for your peace of mind.</p>
 								</div>
 								<!-- LAYER NR. 4 -->
-								<div class="tp-caption" 
+								<!-- <div class="tp-caption" 
 									 data-x="center" data-hoffset="[-70,-70,-70,-90]" 
 									 data-y="bottom" data-voffset="147" 
 									data-transform_idle="o:1;"
@@ -258,9 +267,9 @@
 									data-transform_out="x:-50px;opacity:0;s:1000;e:Power3.easeInOut;s:1000;e:Power3.easeInOut;" 
 									data-start="2000" 
 									><a href="#" class="sl-btn-1">Learn More</a>
-								</div>
+								</div> -->
 								<!-- LAYER NR. 5 -->
-								<div class="tp-caption" 
+								<!-- <div class="tp-caption" 
 									 data-x="center" data-hoffset="[70,70,70,90]"
 									 data-y="bottom" data-voffset="147" 
 									data-transform_idle="o:1;"
@@ -268,7 +277,7 @@
 									data-transform_out="x:50px;opacity:0;s:1000;e:Power3.easeInOut;s:1000;e:Power3.easeInOut;" 
 									data-start="2000" 
 									><a href="#" class="sl-btn-2">Get a Quote</a>
-								</div>
+								</div> -->
 							</li>
 							<!-- SLIDE  -->
 							<li data-title="FINANCE PLAN">
@@ -286,7 +295,8 @@
 									 data-transform_in="y:-100px;opacity:0;s:1500;e:Power3.easeOut;" 
 									 data-transform_out="y:-100;opacity:0;s:1000;e:Power3.easeInOut;s:1000;e:Power3.easeInOut;" 
 									data-start="1000" 
-									><p >LEAVE MONEY PROBLEM TO US & JUST </p>
+									>
+									<!-- <p >LEAVE MONEY PROBLEM TO US & JUST </p> -->
 								</div>
 								<!-- LAYER NR. 2 -->
 								<div class="tp-caption tp-resizeme sl-s2" 
@@ -300,7 +310,8 @@
 									data-whitespace="['nowrap','nowrap','nowrap','normal']"
 									data-fontsize="['60','50','40','30']"
 									data-lineheight="['auto','auto','auto','40']"
-									><p >FOCUS ON YOUR BUSINESS</p>
+									>
+									<p>Keeping your assets secure and well-maintained</p>
 								</div>
 								<!-- LAYER NR. 3 -->
 								<div class="tp-caption tp-resizeme sl-s3" 
@@ -313,10 +324,10 @@
 								 	data-transform_out="y:100px;opacity:0;s:1000;e:Power3.easeInOut;s:1000;e:Power3.easeInOut;"  
 									data-start="1600" 
 									data-fontsize="['16','16','14','12']"
-									><p style="text-align: center;">Moving forward you will be paired with a highly vetted, professional awal bookkeeper who will get to know.</p>
+									><p style="text-align: center;">Trust our expert team to protect your property and keep things running smoothly, so you can enjoy peace of mind every day.</p>
 								</div>
 								<!-- LAYER NR. 4 -->
-								<div class="tp-caption" 
+								<!-- <div class="tp-caption" 
 									 data-x="center" data-hoffset="-70" 
 									 data-y="bottom" data-voffset="147" 
 									data-transform_idle="o:1;"
@@ -324,9 +335,9 @@
 									data-transform_out="x:-50px;opacity:0;s:1000;e:Power3.easeInOut;s:1000;e:Power3.easeInOut;" 
 									data-start="2000" 
 									><a href="#" class="sl-btn-1">Learn More</a>
-								</div>
+								</div> -->
 								<!-- LAYER NR. 5 -->
-								<div class="tp-caption" 
+								<!-- <div class="tp-caption" 
 									 data-x="center" data-hoffset="70"
 									 data-y="bottom" data-voffset="147" 
 									data-transform_idle="o:1;"
@@ -334,7 +345,7 @@
 									data-transform_out="x:50px;opacity:0;s:1000;e:Power3.easeInOut;s:1000;e:Power3.easeInOut;" 
 									data-start="2000" 
 									><a href="#" class="sl-btn-2">Get a Quote</a>
-								</div>
+								</div> -->
 							</li>
 							<!-- SLIDE  -->
 							<li data-title="MOVING FORWARD">
@@ -352,7 +363,8 @@
 									 data-transform_in="y:-100px;opacity:0;s:1500;e:Power3.easeOut;" 
 									 data-transform_out="y:-100;opacity:0;s:1000;e:Power3.easeInOut;s:1000;e:Power3.easeInOut;" 
 									data-start="1000" 
-									><p >LEAVE MONEY PROBLEM TO US & JUST </p>
+									>
+									<!-- <p >LEAVE MONEY PROBLEM TO US & JUST </p> -->
 								</div>
 								<!-- LAYER NR. 2 -->
 								<div class="tp-caption tp-resizeme sl-s2" 
@@ -366,7 +378,7 @@
 									data-whitespace="['nowrap','nowrap','nowrap','normal']"
 									data-fontsize="['60','50','40','30']"
 									data-lineheight="['auto','auto','auto','40']"
-									><p >FOCUS ON YOUR BUSINESS</p>
+									><p >Choose Clean. Choose Confidence!</p>
 								</div>
 								<!-- LAYER NR. 3 -->
 								<div class="tp-caption tp-resizeme sl-s3" 
@@ -379,10 +391,10 @@
 								 	data-transform_out="y:100px;opacity:0;s:1000;e:Power3.easeInOut;s:1000;e:Power3.easeInOut;"  
 									data-start="1600" 
 									data-fontsize="['16','16','14','12']"
-									><p style="text-align: center;">Moving forward you will be paired with a highly vetted, professional awal bookkeeper who will get to know.</p>
+									><p style="text-align: center;">Ensure a safe, healthy, and worry-free environment with our trusted maintenance and security solutions. Clean spaces, secure places—your peace of mind starts here.</p>
 								</div>
 								<!-- LAYER NR. 4 --> 
-								<div class="tp-caption" 
+								<!-- <div class="tp-caption" 
 									data-x="center" data-hoffset="-70" 
 									data-y="bottom" data-voffset="147" 
 									data-transform_idle="o:1;"
@@ -390,9 +402,9 @@
 									data-transform_out="x:-50px;opacity:0;s:1000;e:Power3.easeInOut;s:1000;e:Power3.easeInOut;" 
 									data-start="2000" 
 									><a href="#" class="sl-btn-1">Learn More</a>
-								</div>
+								</div> -->
 								<!-- LAYER NR. 5 -->
-								<div class="tp-caption" 
+								<!-- <div class="tp-caption" 
 									 data-x="center" data-hoffset="70"
 									 data-y="bottom" data-voffset="147" 
 									data-transform_idle="o:1;"
@@ -400,7 +412,7 @@
 									data-transform_out="x:50px;opacity:0;s:1000;e:Power3.easeInOut;s:1000;e:Power3.easeInOut;" 
 									data-start="2000" 
 									><a href="#" class="sl-btn-2">Get a Quote</a>
-								</div>
+								</div> -->
 							</li>
 						</ul>
 					</div>
@@ -426,22 +438,22 @@
 											<div class="iconbox">
 												<span class="icon icon-trophy"></span>
 												<h4>Professional</h4>
-												<p>Lorem ipsum dolor sit , consectet adipisi elit, sed do eiusmod tempor for enim adesg ens minim veniam.</p>
+												<p>We make sure to always do our best, taking care of every detail and ensuring the job is done well from start to finish.</p>
 											</div>
 											<div class="iconbox">
 												<span class="icon icon-briefcase"></span>
-												<h4>Experienced</h4>
-												<p>Lorem ipsum dolor sit , consectet adipisi elit, sed do eiusmod tempor for enim adesg ens minim veniam.</p>
+												<h4>Trust</h4>
+												<p>People trust us because we always follow through, and our clients know they can count on us to deliver on our promises.</p>
 											</div>
 											<div class="iconbox">
 												<span class="icon icon-library"></span>
-												<h4>Vibrant</h4>
-												<p>Lorem ipsum dolor sit , consectet adipisi elit, sed do eiusmod tempor for enim adesg ens minim veniam.</p>
+												<h4>Experienced</h4>
+												<p>We’ve been doing this for years, and our experience helps us find the best solutions and do the job right every time.</p>
 											</div>
 											<div class="iconbox">
 												<span class="icon icon-user-tie"></span>
-												<h4>Personality</h4>
-												<p>Lorem ipsum dolor sit , consectet adipisi elit, sed do eiusmod tempor for enim adesg ens minim veniam.</p>
+												<h4>Energy</h4>
+												<p>We bring a lot of energy to everything we do, staying active and focused to get things done quickly and efficiently.</p>
 											</div>
 										</div>
 									</div>
@@ -466,7 +478,7 @@
 								<div class="counter-inline">
 									<span class="icon icon-stats-bars"></span>
 									<span class="counter">460</span>
-									<p>Cases completed</p>
+									<p>Gallery completed</p>
 								</div>
 							</div>
 							<div class="col-md-3 col-sm-6">
@@ -507,36 +519,34 @@
 						</div>
 						<div class="partner-warp-h1">
 							<div class="col-md-3 col-sm-6">
-								<a href="#"><img src="http://placehold.it/269x160/ccc.jpg" class="img-responsive partner-img" alt="Image"></a>
+								<a href="#"><img src="images/icon/Untitled-2-06.webp" class="img-responsive partner-img" alt="Image"></a>
 							</div>
 							<div class="col-md-3 col-sm-6">
-								<a href="#"><img src="http://placehold.it/269x160/ccc.jpg" class="img-responsive partner-img" alt="Image"></a>
+								<a href="#"><img src="images/icon/Untitled-2-01.webp" class="img-responsive partner-img" alt="Image"></a>
 							</div>
 							<div class="col-md-3 col-sm-6">
-								<a href="#"><img src="http://placehold.it/269x160/ccc.jpg" class="img-responsive partner-img" alt="Image"></a>
+								<a href="#"><img src="images/icon/Untitled-2-02.webp" class="img-responsive partner-img" alt="Image"></a>
 							</div>
 							<div class="col-md-3 col-sm-6">
-								<a href="#"><img src="http://placehold.it/269x160/ccc.jpg" class="img-responsive partner-img" alt="Image"></a>
+								<a href="#"><img src="images/icon/Untitled-2-03.webp" class="img-responsive partner-img" alt="Image"></a>
 							</div>
 							<div class="col-md-3 col-sm-6">
-								<a href="#"><img src="http://placehold.it/269x160/ccc.jpg" class="img-responsive partner-img" alt="Image"></a>
+								<a href="#"><img src="images/icon/Untitled-2-04.webp" class="img-responsive partner-img" alt="Image"></a>
 							</div>
 							<div class="col-md-3 col-sm-6">
-								<a href="#"><img src="http://placehold.it/269x160/ccc.jpg" class="img-responsive partner-img" alt="Image"></a>
+								<a href="#"><img src="images/icon/Untitled-2-07.webp" class="img-responsive partner-img" alt="Image"></a>
 							</div>
 							<div class="col-md-3 col-sm-6">
-								<a href="#"><img src="http://placehold.it/269x160/ccc.jpg" class="img-responsive partner-img" alt="Image"></a>
+								<a href="#"><img src="images/icon/Untitled-2-08.webp" class="img-responsive partner-img" alt="Image"></a>
 							</div>
 							<div class="col-md-3 col-sm-6">
-								<a href="#"><img src="http://placehold.it/269x160/ccc.jpg" class="img-responsive partner-img" alt="Image"></a>
+								<a href="#"><img src="images/icon/Untitled-2-05.webp" class="img-responsive partner-img" alt="Image"></a>
 							</div>
-
 						</div>
 					</div>
 				</div>
 			</section>
 			<!-- /partner -->
-
 			<section id="services" class="no-padding services-h1">
 				<div class="warp-full-width bg-theme">
 					<div class="title-block text-center title-on-dark title-pd">
@@ -634,7 +644,7 @@
 									<p class="sub-title">As always, partners grows with you!</p>
 									<span class="bottom-title"></span>
 								</div>
-								<a href="cases.html" class="ot-btn btn-border-dark-color pull-right">View All</a>
+								<a href="Gallery.html" class="ot-btn btn-border-dark-color pull-right">View All</a>
 							</div>
 						</div>	
 						<div class="project-h1-warp">
@@ -684,7 +694,7 @@
 					</div>
 				</div>
 			</section>
-			<!-- /Cases -->
+			<!-- /Gallery -->
 			<section class="bg-tw-h7">
 				<div class="container">
 					<div class="row">
